update contact page + bug fixes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="about-text">
       <h1>Something Amazing, <br> Blooming soon!</h1>
       <p>Hi there! I’m a storyteller, creator, and dreamer. Sunflowerly is my space to bloom, share, and connect with the world.</p>
+      <p>Something amazing coming soon!</p>
     </div>
   </section>
 </body>
