Hover effect & bug fixes

--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
   <header>
     <div class="logo">sunflowerly.space</div>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-    <nav id="menu">
+    <nav id="menu" class="hidden">
       <ul>
-        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
-
   <section class="about-section">
     <div class="sunflower sunflower-left"></div>
     <div class="about-text">
