--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - Sunflowerly</title>
+  <title>Contact Me</title>
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
 </head>
